@@ -1,3 +1,8 @@
+2009-10-10  Sascha Wilde <wilde@sha-bang.de>
+
+	* cedet/ede/proj-shared.el (ede-proj-makefile-target-name): Use
+	.la for Automake.
+
 2009-10-09  Chong Yidong  <cyd@stupidchicken.com>
 
 	* cedet/ede/pconf.el (ede-proj-configure-synchronize): Use
